desktop-base (6.0.0~) UNRELEASED; urgency=low

  * debian/control:
    - update kde suggest to kde-standards.                      closes: #548244
    - update standards version to 3.9.1.
  * backgrounds:
    - add SpaceFun wallpaper
    - add SpaceFun grub theme.
  * slashy:
    - add SpaceFun theme.
  * kdm-theme:
    - add SpaceFun theme.
    - configure SpaceFun as the default theme.
  * debian/postinst:
    - add SpaceFun alternative at maximum level (default Squeeze theme)
  * Makefile: 
    - drop unused rules for KDE3 and Xfce 4.4.
    - add SpaceFun gdm3 theme.
    - add SpaceFun kdm theme. 
  * {ksplash,kdm}-theme/moreblue-orbit{-default}:
    - drop “Debian” word from image to only use DFSG-free logo. closes: #587668
  * debian/copyright updated for the new theme.

 -- Yves-Alexis Perez <corsac@debian.org>  Sun, 14 Nov 2010 11:01:36 +0100

desktop-base (5.0.6) unstable; urgency=low

  * Non-maintainer upload with ok from Gustavo.
  * Not failing if update-grub2 returns non-zero, this unbreaks
    usage for debian-live (Closes: #467620).

 -- Daniel Baumann <daniel@debian.org>  Fri, 30 Jul 2010 04:46:32 +0200

desktop-base (5.0.5) unstable; urgency=low

  * debian/{preinst,postinst}: remove deprecated, unshipped alternatives.

 -- Yves-Alexis Perez <corsac@debian.org>  Fri, 27 Feb 2009 08:44:53 +0100

desktop-base (5.0.4) unstable; urgency=low

  * Add session and desktop config files for Xfce 4.6.

 -- Yves-Alexis Perez <corsac@debian.org>  Fri, 27 Feb 2009 01:15:20 +0100

desktop-base (5.0.3) unstable; urgency=medium

  * debian/preinst:
    - handle upgrade in various cases: (/etc/splashy/themes symlink or not,
      and changed or unchanged themes files)
  * debian/README.Debian: 
    - announce the change.
    - tell user how to enable MoreBlue orbit theme if splashy is installed
      after desktop-base.
  * debian/postinst:
    - make sure we can use /etc/splashy/config.xml.
  * debian/source.lintian-overrides: